# AndUEProber

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
misc/: AIOHeader_sort_packages.patch  UEWrappers_case_insensitive.patch
source/: Library.cpp
source/AndroidPlatform/: AndroidApp.cpp  AndroidApp.h
source/Core/: ElfScannerManager.cpp  ElfScannerManager.h  ResourceManager.cpp  ResourceManager.h
source/ImGuiExtern/: ImGuiSoftKeyboard.cpp  ImGuiSoftKeyboard.h
source/PointerHook/: IPointerHook.cpp  IPointerHook.h  PointerHookManager.h  SafePointerHook.h  trampoline.s
source/SwapChain/: SwapChainHook.cpp  SwapChainHook.h
source/UEProber/: Demo.cpp  DumpIntegration.cpp  DumpIntegration.h  DumperBridge.cpp  DumperBridge.h  UEProber.cpp  UEProber.h
source/UEProber/GameProfiles/: DeltaForce.hpp  IGameProfileEx.hpp  NiZhan.hpp  PUBG.hpp  RocoKingdom.hpp
source/UEProber/UECore/: Basic.cpp  Basic.h  CoreUObject_classes.h  CoreUObject_functions.cpp  CoreUObject_parameters.h  CoreUObject_structs.h  ReverseUE.md  UnrealContainers.h
source/Utils/: CrashHandler.cpp  FileIO.h  FileLogger.h  HookUtils.h  KittyEx.h  Logger.h
source/Utils/BackTracer/: BackTracer.cpp  BackTracer.h  BackTracerWrapper.h
